cabal-version: 3.0
name: kube-hs
version: 0.0.0.1
-- synopsis:
-- description:
homepage: https://kube.hs
license: BSD-3-Clause
license-file: LICENSE
author: Andrii Nasinnyk
maintainer: anasinnyk@pm.me
-- copyright:
category: Development
build-type: Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:
common warnings
  ghc-options: -Wall

library
  import: warnings
  exposed-modules:
    Kube
    Kube.Config
    Kube.Config.Types

  other-modules:
    Kube.Config.Types.Internal

  -- other-extensions:
  build-depends:
    aeson ^>=2.2.3.0,
    base ^>=4.19.2.0,
    base64 ^>=1.0,
    bytestring ^>=0.12.2.0,
    containers ^>=0.7,
    filepath ^>=1.5,
    network-uri ^>=2.6.4.2,
    optics ^>=0.4,
    pem ^>=0.2,
    process ^>=1.6,
    req ^>=3.13,
    text ^>=2.1,
    vector ^>=0.13,
    x509 ^>=1.7,
    yaml ^>=0.11,

  hs-source-dirs: src
  default-language: GHC2021

executable kube-hs
  import: warnings
  main-is: Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:
    base ^>=4.19.2.0,
    kube-hs,

  hs-source-dirs: app
  default-language: GHC2021

test-suite kube-hs-test
  import: warnings
  default-language: GHC2021
  -- other-modules:
  -- other-extensions:
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:
    base ^>=4.19.2.0,
    kube-hs,
    tasty ^>=1.5,
    tasty-hunit ^>=0.10,
